[package]
name = "websignal"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.8", features = ["ws"] }
clap = { version = "4.5.60", features = ["derive"] }
dashmap = "6.1.0"
futures-util = "0.3.32"
mdns-sd = "0.18.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
