[package]
name = "websignal"
version = "0.1.0"
edition = "2024"

[profile.release]
lto = true
strip = true

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.8", features = ["ws"] }
clap = { version = "4.5.60", features = ["derive"] }
dashmap = "6.1.0"
futures-util = "0.3.32"
get_if_addrs = "0.5.3"
mdns-sd = "0.18.1"
qrcode = "0.14.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
