[package]
name = "websignal"
version = "0.1.0"
edition = "2024"

[profile.release]
strip = true

[dependencies]
anyhow = "1.0.103"
axum = { version = "0.8.9", features = ["ws"] }
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
clap = { version = "4.6.1", features = ["derive"] }
dashmap = "6.2.1"
futures-util = "0.3.32"
get_if_addrs = "0.5.3"
mdns-sd = "0.20.0"
rcgen = "0.14.8"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
tokio = { version = "1.52.3", features = ["full"] }
uuid = { version = "1.23.4", features = ["v4"] }
